--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,11 @@ jobs:
         run: |
           npm install
           npm run build
-
+      - uses: actions/upload-artifact@master
+        with:
+          name: webpack artifacts
+          path: public/
+                
   test:
 
     runs-on: ubuntu-latest
@@ -38,3 +42,4 @@ jobs:
         npm test
       env:
         CI: true
+    
